<resources>
    <string name="app_name">Los Portales</string>
    <string name="app_login"></string>

    <string name="lblbutton1">Ingresar</string>
    <string name="lblbutton2">Registrese</string>
    <string name="lblbutton3">Iniciar</string>
    <string name="lblbutton4">Iniciar con Facebook</string>
    <string name="lblbutton5">Iniciar con Google+</string>
    <string name="lblbutton6">Registrar</string>
    <string name="lblbutton7">Consultas</string>
    <string name="lblbutton8">Productos</string>
    <string name="lblbutton9">Ubicanos</string>
    <string name="lblbutton10">Reservas</string>
    <string name="lblbutton11">Mis Autos</string>
    <string name="lblbutton12">Promociones</string>
    <string name="lblbutton13">Mis Autos</string>
    <string name="lblbutton14">Tiempo Transcurrido</string>
    <string name="lblbutton15">Historico de Tickets</string>
    <string name="lblbutton16">Ubicar mi Auto</string>
    <string name="lblbutton17">Mis Autos</string>
    <string name="lblbutton18">Editar</string>
    <string name="lblbutton19">Eliminar</string>
    <string name="lblbutton20">Mis Autos</string>
    <string name="lblbutton21">Mis Autos</string>


    <string name="lblEditText1">Usuario</string>
    <string name="lblEditText2">Contraseña</string>
    <string name="lblEditText3">Nombres</string>
    <string name="lblEditText4">Apellidos</string>
    <string name="lblEditText5">Documento de Identidad</string>
    <string name="lblEditText6">Teléfono</string>
    <string name="lblEditText7">Sexo</string>
    <string name="lblEditText8">Distrito</string>
    <string name="lblEditText9">Usuario</string>
    <string name="lblEditText10">Contraseña</string>
    <string name="lblEditText11">Correo</string>
    <string name="lblEditText12">Confirmar Contraseña</string>
    <string name="lblEditText13">Nro de Placa</string>
    <string name="lblEditText14">Marca</string>
    <string name="lblEditText15">Modelo</string>
    <string name="lblEditText16">Color</string>
    <string name="lblEditText17">Tipo de Vehiculo</string>
    <string name="lblEditText18">Confirmar Contraseña</string>


    <string name="lblradiobutton1">Hombre</string>
    <string name="lblradiobutton2">Mujer</string>

    <string name="lblTextView1">Usuario</string>
    <string name="lblTextView2">Password</string>
    <string name="lblTextView3">¿Olvidaste tu contraseña?</string>
    <string name="lblTextView4">Registro de Usuario</string>
    <string name="lblTextView5">Jeffry Gutierrez</string>
    <string name="lblTextView6">jguttierrz321@gmail.com</string>
    <string name="lblTextView7">Consultas</string>
    <string name="lblTextView8">Productos</string>
    <string name="lblTextView9">Ubicanos</string>
    <string name="lblTextView10">Reservas</string>
    <string name="lblTextView11">Mis Autos</string>
    <string name="lblTextView12">promo</string>
    <string name="lblTextView13">Registro Auto</string>
    <string name="lblTextView14">Marca</string>


    <string name="title_activity_principal">Menu Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ubicarmiauto">Map</string>

    <string name="promt_sp_nivel">Seleccione Piso</string>
    <string-array name="array_nivel">
        <item>Sotano</item>
        <item>Semisotano</item>
        <item>Primer Piso</item>
        <item>Segundo Piso</item>
    </string-array>

    <string name="promt_sp_zona">Seleccione Zona</string>
    <string-array name="array_zona">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

</resources>
