<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pe.edu.sise.appportales.ConsultasFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblbutton14"
            android:drawableTop="@drawable/ic_reloj2_64c64"
            android:background="@drawable/redondeo_azul"
            android:onClick="irTiempoTranscurridoFragment"
            tools:ignore="OnClick" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblbutton15"
            android:drawableTop="@drawable/ic_check_64x64"
            android:onClick="irHistoricodeTicket"
            android:background="@drawable/redondeo"
            tools:ignore="OnClick" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblbutton16"
            android:drawableTop="@drawable/ic_ubicanos"
            android:background="@drawable/redondeo_rojo"
            android:onClick="irUbicarmiauto"
            tools:ignore="OnClick" />

    </LinearLayout>

</FrameLayout>
