<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:drawableTop="@drawable/ic_check_64x64"
                android:text="@string/lblbutton7"
                android:onClick="irMenuConsultarActivity"
                android:background="@drawable/redondeo_azul"/>


            <Button
                android:drawableTop="@drawable/ic_reserva"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:text="@string/lblbutton10"
                android:onClick="irMenuReservaActivity"
                android:background="@drawable/redondeo_azul"/>

            <Button
                android:drawableTop="@drawable/ic_mis_autos2"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:text="@string/lblbutton11"
                android:onClick="irMenuMisAutosActivity"
                android:background="@drawable/redondeo_azul"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>